<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_version"></string>
    <string name="app_name"></string>
    <string name="app_url">http://m.danielpecos.com/projects/gtd-taskmanager</string>
    
    <string name="author">Daniel Pecos Martínez</string>
    <string name="author_twitter">twitter: @danielpecos</string>  
    <string name="author_email">contact@danielpecos.com</string>     
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    
   	<string-array name="task_priorities">
		<item>Critical</item>
		<item>Important</item>
		<item>Normal</item>
		<item>Low</item>
	</string-array>
    
    <color name="Task_PriorityLow">#ff53A656</color>
    <color name="Task_PriorityNormal">#ff6380D6</color>
    <color name="Task_PriorityImportant">#ffE0B528</color>
    <color name="Task_PriorityCritical">#ffDB5C5C</color>
    <color name="Task_PriorityDiscarded">#ff999999</color>
    <color name="Context_Item_Foreground">#ff23409E</color>
    <color name="Context_Item_Background">#ffC9C9C9</color>
    <color name="Project_Item_Background">#ffD3D8E8</color>
    <color name="Task_Layout_Actions_Background">#ffC0C0C0</color>
    <color name="Dialog_Actions_Background">#ffC0C0C0</color>
    <color name="task_info_label_background">#ffE8E8E8</color>
    
    <string name="task_description_label">Task description:</string>
    <string name="task_priority_label">Task priority:</string>
    <string name="task_status_label">Task status:</string>
    <string name="task_status_discarded">Task discarded</string>
    <string name="task_status_active">Task active</string>
    <string name="task_picture_label">Add a picture:</string>
    <string name="task_take_picture">Take picture</string>
    <string name="task_delete_picture">Delete picture</string>
    <string name="task_duedate_label">Task due date/time:</string>
    <string name="task_duedate_button">Change date</string>
    <string name="task_duetime_button">Change time</string>
	<string name="task_map_label">Task location:</string>    
	<string name="task_map_button">Change location</string>
	<string name="task_location_latitude_label">Latitude:</string>
	<string name="task_location_longitud_label">Longitude:</string> 
    <string name="task_delete">Delete</string>
    <string name="task_quit_title">Do you want to save changes?</string>
    <string name="task_quit_message">If you leave without saving, all changes applied to this task will be lost!</string>
        
	<string name="task_optionsMenu_save">Save</string>   
	<string name="task_optionsMenu_revert">Revert changes</string>     
        
    <string name="context_loadDemo_title">Load demo data?</string>
    <string name="context_loadDemo_message">You haven\'t created any Context yet. Do you want to load some demo data?</string>
    <string name="context_loadDemo_creating">Creating demo data...</string>
    
    <string name="file_saveOk">File successfully saved in SD card as \"%s\"</string>
    <string name="file_loadOk">Data successfully loaded from file \"%s\"</string>
    <string name="file_loadOptions">Select which file to use:</string>
    <string name="file_loadingData">Loading data...</string>
    
    <string name="context_optionsMenu_addContext">Add new Context</string>
    <string name="context_optionsMenu_reloadData">Refresh data</string>
    <string name="context_optionsMenu_settings">Settings</string>
    <string name="context_optionsMenu_about">About</string>
    
    <string name="context_contextMenu_contextTitle">Context actions</string>
    <string name="context_contextMenu_projectTitle">Project actions</string>
    <string name="context_contextMenu_taskTitle">Task actions</string>
    <string name="context_contextMenu_renameContext">Rename Context</string>
    <string name="context_contextMenu_deleteContext">Delete Context</string>
	<string name="context_contextMenu_deleteProject">Delete Project</string>
	<string name="context_contextMenu_deleteTask">Delete Task</string>
    <string name="context_contextMenu_addProject">Add new Project</string>
    <string name="context_contextMenu_addTask">Add new Task</string>
    <string name="context_contextMenu_synchronizeGTasks">Synchronize Google Tasks</string>
    
    <string name="textbox_addContext_title">Create new Context</string>
    <string name="textbox_addContext_label">Context name:</string>
    <string name="textbox_renameContext_title">Rename Context</string>
    <string name="textbox_renameContext_label">Context name:</string>
    <string name="textbox_addProject_title">Create new Project</string>
	<string name="textbox_addProject_label">Project name:</string>
    <string name="textbox_renameProject_title">Rename Project</string>
    <string name="textbox_renameProject_label">Project name:</string>	
    <string name="textbox_changeProjectDescription_title">Change Project description</string>
    <string name="textbox_changeProjectDescription_label">Project description:</string>	    
    <string name="textbox_addTask_title">Set Task name</string>
	<string name="textbox_addTask_label">Task name:</string>
	<string name="textbox_noBlankValue">Enter a value</string>
	
	<string name="error_unknown">Unknown error</string>
	<string name="error_loadingData">Error loading data</string>
	<string name="error_deletingContext">Error deleting Context</string>
	<string name="error_deletingProject">Error deleting Project</string>
	<string name="error_deletingTask">Error deleting Task</string>
	<string name="error_creatingContext">Error creating Context</string>
	<string name="error_creatingProject">Error creating Project</string>
	<string name="error_creatingTask">Error creating Task</string>
	<string name="error_initializingCamera">Error initializing camera application</string>
	<string name="error_sdcard">Error trying to write to SD card</string>
	<string name="error_file_writing">Error writing to file</string>
	<string name="error_file_reading">Error reading to file</string>
	
	<string name="confirm_delete_context">Are you sure you want to delete this Context?</string>
	<string name="result_delete_context">Context \"%s\" successfully deleted</string>
	<string name="confirm_delete_project">Are you sure you want to delete this Project?</string>
	<string name="result_delete_project">Project \"%s\" successfully deleted</string>
	<string name="confirm_delete_task">Are you sure you want to delete this Task?</string>
	<string name="result_delete_task">Task \"%s\" successfully deleted</string>
	<string name="confirm_clear_google">Are you sure you want to forget your current Google Tasks account preferences?</string>
	<string name="confirm_file_load">Are you sure you want to load data from this file and replace current data?</string>
	<string name="result_file_load">File \"%s\" succesfully load</string>

	<string name="project_optionsMenu_renameProject">Rename Project</string>
	<string name="project_optionsMenu_changeDescription">Change description</string>
	<string name="project_optionsMenu_addTask">Add new Task</string>
	
	<string name="gtasks_title">Google Tasks</string>
	<string name="gtasks_freeVersion_1">Just one way synchronization!</string>
	<string name="gtasks_freeVersion_2">To get full synchronization, upgrade to FULL version</string>
	<string name="gtasks_selectAccount">Select a Google account</string>
	<string name="gtasks_errorInRequest">Google Tasks: error in request</string>
	<string name="gtasks_errorInCommunication">Google Tasks: error communicating with server</string>
	<string name="gtasks_synchronizing">Synchronizing with Google Tasks...</string>
	<string name="gtasks_synchronizationFinished">Synchronization finished</string>
	<string name="gtasks_noAccountFoundTitle">No account found</string>
	<string name="gtasks_noAccountFound">It was impossible to find a Google account configured in your system. Please set up one and retry.</string>
	
	<string name="notification_title">Task is about to expire</string>
	<string name="notification_msg"> is about to expire</string>
	
	<string name="settings_category_general">General</string>
	<string name="settings_category_synchronization">Synchronization</string>
	<string name="settings_category_backup">Backup</string>
	<string name="settings_category_fullVersion">Full Version</string>
	
	<string name="settings_task_order_tittle">Task list order</string>
	<string name="settings_task_order_summary">Select a criteria to sort tasks\' lists</string>
	<string-array name="settings_task_order_labels">
		<item>Sort by priority</item>
		<item>Sort alphabetically</item>
	</string-array>
	<string-array name="settings_task_order_values">
		<item>priority</item>
		<item>alphabetic</item>
	</string-array>	
	<string name="settings_task_order_default">priority</string>	
	
    <string name="settings_map_type_title">Map view mode</string>
    <string name="settings_map_type_summary">Choose which type of map to use</string>
	<string-array name="settings_map_type_labels">
        <item>Satellite</item>
        <item>Traffic</item>
    </string-array>
    <string-array name="settings_map_type_values">
        <item>type_satellite</item>
        <item>type_traffic</item>
    </string-array>
    <string name="settings_map_type_default">type_satellite</string>
    
    <string name="settings_clearGoogle_title">Clear Google Tasks account</string>  
    <string name="settings_clearGoogle_summary">Forget authorized Google Tasks account</string>    
    
    <string name="settings_backup_store_title">Backup data</string>
    <string name="settings_backup_store_summary">Save a backup file</string>
    <string name="settings_backup_restore_title">Restore backup</string>
    <string name="settings_backup_restore_summary">Load a backup file</string>
    
    <string name="settings_fullVersion_title">Enable extra capabilities?</string>
    <string name="settings_fullVersion_summary">GoogleTasks two ways synchronization, banner free, ...</string>
	
</resources>