<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item 
		android:id="@+id/context_contextMenu_renameContext"
    	android:title="@string/context_contextMenu_renameContext"/>
	<item 
		android:id="@+id/context_contextMenu_deleteContext"
    	android:title="@string/context_contextMenu_deleteContext"/>
	<item 
		android:id="@+id/context_contextMenu_deleteProject"
    	android:title="@string/context_contextMenu_deleteProject"/>
	<item 
		android:id="@+id/context_contextMenu_deleteTask"
    	android:title="@string/context_contextMenu_deleteTask"/>				
    <item 
		android:id="@+id/context_contextMenu_addProject"
    	android:title="@string/context_contextMenu_addProject"/>
    <item 
		android:id="@+id/context_contextMenu_addTask"
    	android:title="@string/context_contextMenu_addTask"/>
	<item 
		android:id="@+id/context_contextMenu_synchronizeGTasks"
    	android:title="@string/context_contextMenu_synchronizeGTasks"/>		
	<item 
		android:id="@+id/context_contextMenu_editTask"
    	android:title="@string/context_contextMenu_editTask"/>		    	
</menu>
