<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
		android:id="@+id/context_optionsMenu_addContext"
    	android:title="@string/context_optionsMenu_addContext"
		android:icon="@android:drawable/ic_menu_add"/>
	<item 
		android:id="@+id/context_optionsMenu_reloadData"
    	android:title="@string/context_optionsMenu_reloadData"
		android:icon="@android:drawable/ic_menu_add"/>
    <item 
		android:id="@+id/context_optionsMenu_configuration"
    	android:title="@string/context_optionsMenu_configuration"
		android:icon="@android:drawable/ic_menu_preferences"/>
    <item 
		android:id="@+id/context_optionsMenu_about"
    	android:title="@string/context_optionsMenu_about"
		android:icon="@android:drawable/ic_menu_info_details"/>
</menu>
