<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#ffffffff">
	     
	<TextView 
		android:id="@+id/task_duedate_label"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
        android:background="@color/task_info_label_background"
        android:padding="10dip"
        android:layout_marginBottom="5dip"     
        android:textStyle="bold"     
        android:text="@string/task_duedate_label"/> 
	
	<RelativeLayout 	
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView 
			android:id="@+id/task_duedate"
	        android:layout_width="110dip"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:textColor="#ff000000" 
	        android:text="-" />

		<TextView 
			android:id="@+id/task_duetime"
	        android:layout_width="110dip"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
			android:layout_below="@+id/task_duedate"	    
	        android:textColor="#ff000000" 
	        android:text="-" />   
       		        
	    <Button
	    	android:id="@+id/button_changeDueDate"
	    	android:layout_width="90dip"
			android:layout_height="wrap_content"   
			android:layout_toLeftOf="@+id/button_changeDueTime"
	    	android:text="@string/task_duedate_button"
	    	android:drawableTop="@+android:drawable/ic_menu_month"/>
	    	
    	<Button
	    	android:id="@+id/button_changeDueTime"
	    	android:layout_width="90dip"
			android:layout_height="wrap_content"   
			android:layout_alignParentRight="true"
	    	android:text="@string/task_duetime_button"
	    	android:drawableTop="@+android:drawable/ic_menu_recent_history"/>
    </RelativeLayout>
        
    <TextView 
		android:id="@+id/task_duetime_label"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
        android:drawableTop="@color/task_info_label_background"
        android:padding="10dip"
        android:layout_marginTop="10dip"          
        android:layout_marginBottom="5dip"     
        android:textStyle="bold"     
        android:text="@string/task_map_label"/> 
  
    
    <RelativeLayout 	
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/task_location_lat_label"
	        android:layout_width="90dip"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:text="@string/task_location_latitude_label"/>
		<TextView 
			android:id="@+id/task_location_lat"
	        android:layout_width="110dip"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/task_location_lat_label"
	        android:padding="10dip"
	        android:textColor="#ff000000" 
	        android:text="-" />
		<TextView
			android:id="@+id/task_location_long_label"
	        android:layout_width="90dip"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/task_location_lat_label"
	        android:padding="10dip"
	        android:text="@string/task_location_longitud_label"/>	        
	    <TextView 
			android:id="@+id/task_location_long"
	        android:layout_width="110dip"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/task_location_lat"
	        android:layout_toRightOf="@+id/task_location_long_label"
	        android:padding="10dip"
	        android:textColor="#ff000000" 
	        android:text="-" />
	    <Button
	    	android:id="@+id/button_changeMapPosition"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"   
	    	android:layout_alignParentRight="true"
	    	android:text="@string/task_map_button"
	    	android:drawableTop="@drawable/ic_menu_mapmode"
	    	android:layout_gravity="center_vertical"/> 
  	  </RelativeLayout>
	          
</LinearLayout>
